@@ -32,7 +32,7 @@ Fixed addon after page changes</news>
   </extension>
 </addon>
 
-<addon id="plugin.video.videomediaset" name="Mediaset Play" provider-name="phate89, aracnoz" version="2.0.4+matrix.1">
+<addon id="plugin.video.videomediaset" name="Mediaset Play" provider-name="phate89, aracnoz" version="2.0.5+matrix.1">
     <requires>
         <import addon="xbmc.python" version="3.0.0" />
         <import addon="script.module.phate89" version="1.2.1"/>
@@ -52,7 +52,9 @@ Fixed addon after page changes</news>
         <forum>https://forum.kodi.tv/showthread.php?tid=292876</forum>
         <source>https://github.com/phate89/plugin.video.videomediaset</source>
         <reuselanguageinvoker>true</reuselanguageinvoker>
-        <news>2.0.4
+        <news>2.0.5
+- restore Programmi tv in home page
+2.0.4
 - fixed loading of live channels and tv guide for a missing property (thx to madpilot78)
 - removed workaround that created problems with loading seasons in shows like striscia
         </news>
