@@ -1,3 +1,6 @@
+[B]2.0.5[/B]
+- restore Programmi tv in home page
+
 [B]2.0.4[/B]
 - fixed loading of live channels and tv guide for a missing property (thx to madpilot78)
 - removed workaround that created problems with loading seasons in shows like striscia
